<resources>
    <string name="app_name">Lista zakupów</string>
    <string name="nazwa_produktu">Nazwa produktu</string>
    <string name="cena">Cena</string>
    <string name="ilosc">Ilość</string>
    <string name="dodaj">Dodaj</string>
    <string name="produkt">Produkt</string>
    <string name="dodaj_nowy_przedmiot">Dodaj nowy przedmiot</string>
    <string name="usun">Usuń</string>
    <string name="sprzedaj">Sprzedaj</string>
    <string name="edytuj">Edytuj</string>
    <string name="cena_">Cena:</string>
    <string name="nazwa">Nazwa:</string>
    <string name="wroc">Wróć</string>
    <string name="ilosc_">Ilość:</string>
</resources>